snap & packagekit: Refresh ratings when they arrive

As we already did for Flatpak.

BUG: 407471